# emobon-assembly-downstream

./: .gitignore  README.md  analyses_by_observatory.py  megahit_and_metaquast_replicates.py  pyproject.toml
docs/: metagenomic-analyses-software.text
